Fix: wrap text in a pre tags

--- a/template/style.css
+++ b/template/style.css
@@ -1,6 +1,9 @@
 /*
  * => Global
  */
+pre {
+    white-space: pre-wrap;
+}
 .clearfix:before,
 .clearfix:after {
     content: "";
